清理一批gui的继承类